Hover head and tail label, also incorporated reverse technique

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-GEMINI_API_KEY='AIzaSyBlgeXnooOl1UWtQjEUx81jWMnewajvy_M'
+GEMINI_API_KEY="AIzaSyBzhBwxOUD1Fn_a1yp36FfuLsR2Z6jM56w"
 
 HUGGING_FACE_API="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"
